Organizes files; fixes styling; renders channel list

--- a/src/components/Login/login-registration.css
+++ b/src/components/Login/login-registration.css
@@ -49,7 +49,7 @@ body, html, #root, .app {
   }
 
   .column1 {
-    background-image: url(./images/Oblation.jpg);
+    background-image: url(../images/Oblation.jpg);
     float: right;
     width: 70vw;
     height:100vh;
