--- a/src/components/Collapsible/Collapsible.css
+++ b/src/components/Collapsible/Collapsible.css
@@ -40,3 +40,8 @@
   font-size: 15px;
   font-family: 'Didact Gothic'
 }
+
+.channel-name:hover {
+  background-color: #43111A;
+  cursor: pointer;
+}
