--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -24,6 +24,7 @@
   
   .modal-content {
     width: 80vw;
+    height: 80vh;
     max-width: 500px;
     background-color: #fff;
     transition: all 0.3s ease-in-out;
@@ -70,4 +71,11 @@
     color: #6C1C29;
     font-family: 'Urbanist';
     font-weight: bold;
+  }
+
+  .dm-messages {
+    height: 30vh;
+    overflow: scroll;
+    display: flex;
+    flex-direction: column-reverse;
   }
