Begins add user

--- a/src/components/Dashboard/chatbox.css
+++ b/src/components/Dashboard/chatbox.css
@@ -3,6 +3,8 @@
     padding: 1%;
     height: 62vh;
     overflow: scroll;
+    display: flex;
+    flex-direction: column-reverse;
 }
 
 .channel-send form {
