--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -79,3 +79,12 @@
     display: flex;
     flex-direction: column-reverse;
   }
+
+  .add-button {
+    height: 5vh;
+    font-size: 2vh;
+    width: 5vh;
+    padding: 5%;
+    color: white;
+    font-weight: bold;
+  }
