--- a/src/components/Login/login-registration.css
+++ b/src/components/Login/login-registration.css
@@ -17,7 +17,8 @@ body, html, #root, .app {
     z-index: 100;
     background: whitesmoke;
     border-radius: 8px;
-    box-shadow: 3px 5px 3px black;
+    margin: 15px;
+    padding: 5%;
    }
  
  .inputField {
