--- a/src/components/Dashboard/chatbox.css
+++ b/src/components/Dashboard/chatbox.css
@@ -17,7 +17,7 @@
     height: 100%;
     width: fit-content;
     padding: 1%;
-    background-color: #0F2F1D;
+    background-color: #000000;
     outline: 1px solid #000
 }
 
